# scratchformer

./: .gitignore  README.md  README_ALSO.md  pyproject.toml
src/: config.py  dataset.py  decoder.py  encoder.py  feedforward.py  inference.py  model.py  multi_head_attention.py  positional_encoding.py  test.py  tokenizer.py  tokenizer_from_scratch.py  train.py  utils.py
